# autobots-fast-api-class

./: .gitignore  README.md
challenges/utils_challenge/: main.py
challenges/utils_challenge/tests/: test_math_utils.py  test_string_utils.py
challenges/utils_challenge/utils/: math_utils.py  string_utils.py
python_playground/: main.py  python_object_review.py
python_playground/tests/: test_math_utils.py
python_playground/utils/: math_utils.py
todo_app/: README.md  pyproject.toml
todo_app/tests/: test_todos.py
