[tool.poetry]
name = "todo_app"
version = "0.1.0"
description = "This is a description for the todo app"
authors = ["Kody Carling <kodycarling19@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
pydantic = "^1.8.2"
pyclinic = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.7b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
